# NONOS userland: capsule_driver_virtio_blk
# eK@nonos.systems
#
# Userland virtio-blk driver capsule. Drives a virtio-pci block
# device through the kernel hardware broker (MkDeviceList /
# MkDeviceClaim / MkMmioMap / MkIrqBind / MkDmaMap). No kernel
# memory paths and no kernel block registry — IPC only.

[package]
name = "nonos_capsule_driver_virtio_blk"
version = "0.1.0"
edition = "2021"
publish = false
license = "AGPL-3.0"
authors = ["eK@nonos.systems"]
description = "NONOS userland virtio-blk driver capsule"

[[bin]]
name = "driver_virtio_blk"
path = "src/main.rs"

[dependencies]
nonos_libc = { package = "nonos_userland_libc", path = "../libc" }

[profile.release]
panic = "abort"
opt-level = 2
lto = false
debug = false
strip = true
