# NONOS userland: capsule_driver_virtio_gpu
# eK@nonos.systems
#
# Virtio GPU display-controller capsule. Owns the virtio-gpu PCI
# claim, MMIO register window, IRQ, and control-queue DMA. Compositor
# and window policy stay in separate userland capsules.

[package]
name = "nonos_capsule_driver_virtio_gpu"
version = "0.1.0"
edition = "2021"
publish = false
license = "AGPL-3.0"
authors = ["eK@nonos.systems"]
description = "NONOS userland virtio-gpu driver capsule"

[[bin]]
name = "driver_virtio_gpu"
path = "src/main.rs"

[dependencies]
nonos_libc = { package = "nonos_userland_libc", path = "../libc" }

[profile.release]
panic = "abort"
opt-level = 2
lto = false
debug = false
strip = true
