# NONOS userland: capsule_driver_virtio_net
# eK@nonos.systems
#
# Userland virtio-net driver capsule. Drives a virtio-pci network
# device through the kernel hardware broker (MkDeviceList /
# MkDeviceClaim / MkMmioMap / MkIrqBind / MkDmaMap). Frames only —
# no IP, no TCP, no ARP.

[package]
name = "nonos_capsule_driver_virtio_net"
version = "0.1.0"
edition = "2021"
publish = false
license = "AGPL-3.0"
authors = ["eK@nonos.systems"]
description = "NONOS userland virtio-net driver capsule"

[[bin]]
name = "driver_virtio_net"
path = "src/main.rs"

[dependencies]
nonos_libc = { package = "nonos_userland_libc", path = "../libc" }

[profile.release]
panic = "abort"
opt-level = 2
lto = false
debug = false
strip = true
