# NONOS userland: capsule_driver_virtio_rng
# eK@nonos.systems
#
# First real userland hardware driver capsule. Drives a virtio-rng
# device through the kernel hardware broker (MkDeviceList /
# MkDeviceClaim / MkMmioMap / MkIrqBind / MkDmaMap).

[package]
name = "nonos_capsule_driver_virtio_rng"
version = "0.1.0"
edition = "2021"
publish = false
license = "AGPL-3.0"
authors = ["eK@nonos.systems"]
description = "NONOS userland virtio-rng driver capsule"

[[bin]]
name = "driver_virtio_rng"
path = "src/main.rs"

[dependencies]
nonos_libc = { package = "nonos_userland_libc", path = "../libc" }

[profile.release]
panic = "abort"
opt-level = 2
lto = false
debug = false
strip = true
