# NONOS userland: capsule_entropy
# eK@nonos.systems
#
# Real entropy authority as a userland capsule. Replaces the
# kernel-resident `src/services/entropy_engine/`. Pool mixing and user
# request handling live here; the kernel keeps only the boot RNG path.

[package]
name = "nonos_capsule_entropy"
version = "0.1.0"
edition = "2021"
publish = false
license = "AGPL-3.0"
authors = ["eK@nonos.systems"]
description = "NONOS entropy capsule, userland RNG authority"

[[bin]]
name = "entropy"
path = "src/main.rs"

[dependencies]
nonos_libc = { package = "nonos_userland_libc", path = "../libc" }

[profile.release]
panic    = "abort"
opt-level = 2
lto      = false
debug    = false
strip    = true

[profile.dev]
panic    = "abort"
opt-level = 0
debug    = true
