# NONOS userland: capsule_file_manager
# eK@nonos.systems
#
# Static cwd listing with cursor navigation and a selected entry.
# Owned state, no globals. Keyboard input (j/k, Enter, Esc). Real
# production capsule built on `nonos_app_skeleton`.

[package]
name = "nonos_file_manager"
version = "0.1.0"
edition = "2021"
publish = false
license = "AGPL-3.0"
authors = ["eK@nonos.systems"]
description = "NONOS file manager capsule"

[[bin]]
name = "file_manager"
path = "src/main.rs"

[dependencies]
nonos_libc = { package = "nonos_userland_libc", path = "../libc" }
nonos_app_skeleton = { path = "../app_skeleton" }

[profile.release]
panic = "abort"
opt-level = 2
lto = false
debug = false
strip = true

[profile.dev]
panic = "abort"
opt-level = 0
debug = true
