# NONOS userland: capsule_net_dns
# eK@nonos.systems
#
# DNS resolver capsule. Sends queries over `capsule_net_udp` to a
# configured upstream resolver, caches answers, exposes the
# `net.dns` endpoint for name lookups. No authoritative server
# behaviour — recursive lookups bottom out at the upstream.

[package]
name = "nonos_capsule_net_dns"
version = "0.1.0"
edition = "2021"
publish = false
license = "AGPL-3.0"
authors = ["eK@nonos.systems"]
description = "NONOS userland DNS resolver capsule"

[[bin]]
name = "net_dns"
path = "src/main.rs"

[dependencies]
nonos_libc = { package = "nonos_userland_libc", path = "../libc" }

[profile.release]
panic = "abort"
opt-level = 2
lto = false
debug = false
strip = true
